--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Image Stuff</title>
+    <title>Pixel me this!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--    <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">-->
-    <!--    <link rel="stylesheet" href="style_2.css">-->
     <link href="https://fonts.googleapis.com/css?family=Arima+Madurai&display=swap" rel="stylesheet">
-
     <style>
         body {
             margin: 0;
@@ -137,14 +134,13 @@
 
 <body>
 <header>
-    <h1>Pixelator</h1>
+    <h1>Pixel me this!</h1>
 </header>
 <div class="frame">
-    <img id="image"/>
+    <img id="image" alt="original image" src=""/>
     <canvas id="canvas" class="canvas"></canvas>
-    <!--    <div class="glass"></div>-->
+        <div class="glass"></div>
 </div>
-<!--<hr>-->
 <div class="controls">
     <div class="controlRow">
         <label for="size">Size</label>
