--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <option value="3">Painting</option>
         </select>
     </div>
-    <div class="controlWor">
+    <div class="controlRow">
         <label for="padding">Padding</label>
         <input type="range" min="0" max="10" step="1" value="0" id="padding" name="padding">
     </div>
