extract animation. fix circle rendering offset

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
 <div class="controls">
     <div class="controlRow">
         <label for="size">Size</label>
-        <input type="range" min="4" max="24" step="4" value="4" id="size" name="size">
+        <input type="range" min="2" max="12" step="2" value="2" id="size" name="size">
     </div>
     <div class="controlRow">
         <label for="style">Style</label>
         <select name="style" id="style">
             <option value="1">Circle</option>
             <option value="2">Square</option>
-            <option value="3">Painting</option>
+            <option value="3" selected="selected">Painting</option>
         </select>
     </div>
     <div class="controlRow">
         <label for="padding">Padding</label>
-        <input type="range" min="0" max="10" step="1" value="0" id="padding" name="padding">
+        <input type="range" min="0" max="2" step="1" value="0" id="padding" name="padding">
     </div>
 
 </div>
