add xray functionality

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <div class="frame">
     <img id="image" alt="original image" src=""/>
     <canvas id="canvas" class="canvas"></canvas>
-        <div class="glass"></div>
+<!--        <div class="glass"></div>-->
 </div>
 <div class="controls">
     <div class="controlRow">
         <label for="size">Size</label>
-        <input type="range" min="2" max="12" step="2" value="2" id="size" name="size">
+        <input type="range" min="2" max="12" step="2" value="4" id="size" name="size">
     </div>
     <div class="controlRow">
         <label for="style">Style</label>
@@ -35,6 +35,10 @@
     <div class="controlRow">
         <label for="padding">Padding</label>
         <input type="range" min="0" max="2" step="1" value="0" id="padding" name="padding">
+    </div>
+    <div class="controlRow">
+        <label for="xray">Xray</label>
+        <input type="checkbox" name="xray" id="xray">
     </div>
 
 </div>
