add animation toggle. try to better scale pixelsize. style fixup

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         <label for="xray">Xray</label>
         <input type="checkbox" name="xray" id="xray">
     </div>
+    <div class="controlRow">
+        <label for="animate">Animate</label>
+        <input type="checkbox" name="animate" id="animate">
+    </div>
 
 </div>
 <script src="app.js"></script>
