try to better scale pixelsize again

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 <div class="controls">
     <div class="controlRow">
         <label for="size">Size</label>
-        <input type="range" min="2" max="12" step="2" value="4" id="size" name="size">
+        <input type="range" min="1" max="10" step="1" value="1" id="size" name="size">
     </div>
     <div class="controlRow">
         <label for="style">Style</label>
         <select name="style" id="style">
-            <option value="1">Circle</option>
+            <option value="1" selected="selected">Circle</option>
             <option value="2">Square</option>
-            <option value="3" selected="selected">Painting</option>
+            <option value="3">Painting</option>
         </select>
     </div>
     <div class="controlRow">
